--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
 
 
     <!-- Styles and Scripts -->
-    <link href="css/fonts.css" rel="stylesheet" prefetch>
+    <link href="css/fonts.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script></script>
 </head>
 
 <body>
@@ -100,6 +101,7 @@
         </nav>
     </header>
     <div class="recents"></div>
+    <footer></footer>
 </body>
 
 </html>
