--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="distribution" content="Global">
     <meta name="rating" content="General">
     <meta name="revisit-after" content="7 days">
-    <meta http-equiv="refresh" content="300;url=https://example.com/">
+    <meta http-equiv="refresh" content="">
     <meta name="theme-color" content="#E64545">
 
     <!-- Cache Control -->
@@ -65,7 +65,7 @@
     <!-- Google+/schema.org -->
     <meta itemprop="name" content="Content Title">
     <meta itemprop="description" content="Content description less than 200 characters">
-    <meta itemprop="image" content="https://example.com/image.jpg">
+    <meta itemprop="image" content="">
 
     <!-- iOS/Android -->
     <meta name="format-detection" content="telephone=no">
@@ -87,21 +87,18 @@
 
 <body>
     <header>
-        <span class="logo">PØSER</span>
-        <div class="banner">
-            <img src="">
-        </div>
         <nav>
-            <ul>
-                <li><a>Home</a></li>
-                <li><a>Collections</a></li>
-                <li><a>Shop</a></li>
-                <li><a>ART</a></li>
-            </ul>
+            <span class="logo">PØSER</span>
+            <!--
+           <ul>
+    <li><a>Home</a></li>
+    <li><a>Collections</a></li>
+    <li><a>Shop</a></li>
+    <li><a>ART</a></li>
+</ul>
+-->
         </nav>
     </header>
-    <div class="recents"></div>
-    <footer></footer>
 </body>
 
 </html>
