Think I fixed everything up for the most part

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <!-- SEO/GENERAL -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="poser,pøser,POSER,PØSER,clothing,clothes,apparel,skater,alternativee">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="keywords" content="poser,pøser,POSER,PØSER,clothing,clothes,apparel,skater,alternative">
     <meta name="description" content="PØSER CLOTHING">
     <meta name="subject" content="Clothing and Apparel">
     <meta name="language" content="en">
@@ -28,7 +28,7 @@
     <meta name="rating" content="General">
     <meta name="revisit-after" content="7 days">
     <meta http-equiv="refresh" content="">
-    <meta name="theme-color" content="#E64545">
+    <meta name="theme-color" content="#404040">
 
     <!-- Cache Control -->
     <meta http-equiv="Expires" content="0">
@@ -133,8 +133,7 @@
                 </div>
                 <div id="info">
                     <p>PØSER ART allows artists and ametuers alike turn artwork into possible designs for PØSER products. After artwork is submitted it's voted upon by the community, or picked by the staff, and then incorporated into a product.</p>
-                    <br>
-                    <div style="float:right;">
+                    <div id="links">
                         <a href="">Learn More <i class="fa fa-angle-right"></i></a>
                         <a href="">Submit Artwork <i class="fa fa-angle-right"></i></a>
                     </div>
